--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@types/node": "^16.18.59",
     "@types/react": "^18.2.33",
     "@types/react-dom": "^18.2.14",
+    "gh-pages": "^6.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
@@ -47,5 +48,6 @@
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "sass": "^1.69.5"
-  }
+  },
+  "homepage": "https://isvitka.github.io/itprofit-test-task"
 }
